<resources>
    <string name="app_name">JetIq</string>
    <string name="schedule_of_classes">Розклад занять</string>
    <string name="i_am_in_university">Я в університеті</string>
    <string name="nav_header_desc">Your Description Here</string>
    <string name="nav_header_title">Your Title Here</string>
    <string name="nav_header_subtitle">Your Subtitle Here</string>
    <string name="action_settings">Налаштування</string>
    <string name="menu_home">Головна</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer_open">Відкрити</string>
    <string name="navigation_drawer_close">Закрити</string>
    <string name="menu_schedule">Розклад</string>
    <string name="menu_material">Матеріали</string>
    <string name="test_book">Залікова книжка</string>
    <string name="success_log">Журнал успішності</string>
    <string name="profile_photo">Фото профілю</string>
    <string name="nav_header_name">Ігнатій Мельник</string>
    <string name="nav_header_group">1-ПІ 22-Б</string>
    <!-- Preference Titles -->
    <string name="messages_header">Повідомлення</string>
    <string name="sync_header">Сигхронізація</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_faculty">Фіткі</string>
    <string name="no_messages">Поки що немає повідомлень\nможеш відпочиваати</string>

</resources>