<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/baseline_schedule_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_material"
            android:icon="@drawable/baseline_folder_copy_24"
            android:title="@string/menu_material" />
        <item
            android:id="@+id/nav_success_log"
            android:icon="@drawable/baseline_star_24"
            android:title="@string/success_log" />
        <item
            android:id="@+id/na_test_book"
            android:icon="@drawable/baseline_book_24"
            android:title="@string/test_book" />
    </group>
</menu>